<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizza_background"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.example.android.pizzaparty.MainActivity">

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="139dp"
        android:layout_height="54dp"
        android:ems="5"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constrainedHeight="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/hungry_radio_group"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_attend_edit_text" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/hungry_radio_group"
        app:layout_constraintLeft_toLeftOf="parent">

    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_pizzas"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_radio_button" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick"
        android:text="@string/calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_pizzas_text_view"/>

    <RadioButton
        android:id="@+id/ravenous_radio_button"
        android:layout_width="104dp"
        android:layout_height="49dp"
        android:text="@string/ravenous"
        app:layout_constraintStart_toEndOf="@+id/medium_radio_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioButton
        android:id="@+id/medium_radio_button"
        android:layout_width="99dp"
        android:layout_height="49dp"
        android:checked="true"
        android:text="@string/medium"
        app:layout_constraintStart_toEndOf="@+id/light_radio_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:labelFor="@id/num_attend_edit_text"
        android:paddingTop="40dp"
        android:text="@string/number_of_people"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hungry_radio_group" />

    <RadioButton
        android:id="@+id/light_radio_button"
        android:layout_width="78dp"
        android:layout_height="49dp"
        android:text="@string/light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>